# ScholarHub

./: .gitignore  README.md  netlify.toml  package.json
scraping/: pyproject.toml
scraping/docs/: ARCHITECTURE.md  CONFIG_GUIDE.md  OPERATIONS.md
scraping/reports/: empty_reaudit_after_patch_20260323_173759.jsonl  failed_reaudit_20260323_163642.jsonl  failed_reaudit_after_patch2_20260323_172136.jsonl  failed_reaudit_after_patch3_20260323_172923.jsonl  failed_reaudit_after_patch4_20260323_173525.jsonl  failed_reaudit_after_patch_20260323_171453.jsonl  spider_audit_20260323_160741.jsonl  spider_audit_one_by_one_20260323_161248.jsonl  spider_audit_one_by_one_20260323_161256.jsonl  spider_audit_one_by_one_20260323_165259.jsonl  spider_audit_one_by_one_20260323_174332.jsonl  spider_audit_one_by_one_20260323_175200.jsonl  spider_audit_one_by_one_20260323_175633.jsonl  spider_audit_one_by_one_20260323_175939.jsonl  spider_audit_one_by_one_20260323_181404.jsonl  spider_audit_one_by_one_20260323_181410.jsonl  spider_audit_one_by_one_20260323_181433.jsonl  spider_audit_one_by_one_20260323_181450.jsonl  spider_audit_one_by_one_20260323_181525.jsonl  spider_audit_one_by_one_20260323_181559.jsonl  spider_audit_one_by_one_20260323_181840.jsonl  spider_audit_one_by_one_20260323_181841.jsonl  spider_audit_one_by_one_20260323_181842.jsonl  spider_audit_one_by_one_20260323_181902.jsonl  spider_audit_one_by_one_20260323_181922.jsonl  spider_audit_one_by_one_20260323_181942.jsonl  spider_audit_one_by_one_20260323_182421.jsonl  spider_audit_one_by_one_20260323_182423.jsonl  spider_audit_one_by_one_20260323_182424.jsonl  spider_audit_one_by_one_20260323_182426.jsonl  spider_audit_one_by_one_20260323_182429.jsonl  spider_audit_one_by_one_20260323_182431.jsonl  spider_audit_one_by_one_20260323_182452.jsonl  spider_audit_one_by_one_20260323_183853.jsonl  spider_audit_one_by_one_20260323_183856.jsonl  spider_audit_one_by_one_20260323_183917.jsonl  spider_audit_one_by_one_20260323_183941.jsonl  spider_audit_one_by_one_20260323_183949.jsonl  spider_audit_one_by_one_20260323_184009.jsonl  spider_audit_one_by_one_20260323_184050.jsonl  (+25 more)
scraping/scripts/: audit_spiders_one_by_one.py  audit_spiders_one_by_one_child.py  seed_sources.py  seed_test_data.py  stats_sources.py  validate_sources.py
scraping/sources/: MUST_HAVE.md  README.md  aggregators.json  foundations.json  government.json  official_programs.json  schema.json  universities.json
scraping/tests/: conftest.py  (+12 more)
(+723 files in other folders)
