[project]
name = "scholarhub-pipeline"
version = "0.1.0"
description = "ScholarHub scholarship scraping pipeline"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "bleach>=6.0.0",
    "check-jsonschema>=0.37.0",
    "click>=8.3.1",
    "convex>=0.7.0",
    "extruct>=0.18.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pycountry>=26.2.16",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "scrapling[fetchers]>=0.4.2",
    "structlog>=25.5.0",
]

[project.scripts]
scrape = "scholarhub_pipeline.cli:scrape"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholarhub_pipeline"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "D",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "T20",
    "RUF",
]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D103", "ANN"]
"scripts/**/*.py" = ["T20"]
"src/scholarhub_pipeline/configs/*.py" = ["D101", "D102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
